Basic chat in webapp now working.

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,20 +13,20 @@
             <div id="model-list">
                 <div class="model-dropdown" id="chat-model">
                     <label for="chat-model-select">Chat Model</label>
-                    <select name="chat-model-select" id="chat-model-select">
-                        <option value="">Select an option</option>
+                    <select name="chat-model-select" id="chat-model-select" class="model-dropdown-menu">
+                        <option value="">No Model Found. Pull from Ollama first.</option>
                     </select>
                 </div>
                 <div class="model-dropdown" id="embed-model">
                     <label for="embed-model-select">Embedding Model</label>
-                    <select name="embed-model-select" id="embed-model-select">
-                        <option value="">Select an option</option>
+                    <select name="embed-model-select" id="embed-model-select" class="model-dropdown-menu">
+                        <option value="">No Model Found.</option>
                     </select>
                 </div>
                 <div class="model-dropdown" id="vision-model">
                     <label for="vision-model-select">Vision Model</label>
-                    <select name="vision-model-select" id="vision-model-select">
-                        <option value="">Select an option</option>
+                    <select name="vision-model-select" id="vision-model-select" class="model-dropdown-menu">
+                        <option value="">No Model Found.</option>
                     </select>
                 </div>
             </div>
