--- a/static/css/style.css
+++ b/static/css/style.css
@@ -97,3 +97,28 @@ button {
     justify-content: center;
     align-content: center;
 }
+
+.user-chat-bubble, .response-chat-bubble {
+    background-color: #1f1f1f;
+    color: whitesmoke;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 10px;
+    max-width: 60%;
+    display: inline-block;
+}
+
+.response-chat-bubble {
+    text-align: left;
+}
+
+.user-chat-bubble {
+    text-align: right;
+    align-self: flex-end;
+}
+
+#chat-window {
+    display: flex;
+    flex-direction: column-reverse;
+    overflow: auto;
+}
