--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <header></header>
+    <header><h1>Simple Chatbot</h1></header>
     <main>
         <div id="side-bar">
             <div id="model-list">
