--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,7 +53,7 @@ main {
     flex-direction: column-reverse;
     overflow-y: auto;
     padding: 5px;
-    max-height: 80vh;
+    max-height: 90vh;
 }
 
 #user-input {
@@ -67,15 +67,26 @@ main {
     align-content: center;
 }
 
+#user-input-container {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
 #user-input-field {
     width: 48vh;
-    height: 1rem;
+    min-height: 1em;
     background-color: #1f1f1f;
     border: none;
     outline: none;
+    margin: 15px;
+    padding: 10px;
+    overflow-y: hidden;
+    resize: none;
+    display: inline-block;
+    white-space: pre-wrap;
 }
 
-select, input, button {
+select, input, button, textarea {
     background-color: #353535;
     color: whitesmoke;
     border-radius: 10px;
@@ -90,18 +101,6 @@ button {
     justify-content: center;
 }
 
-#user-input-padding {
-    background-color: #1f1f1f;
-    height: 2rem;
-    width: 50vh;
-    padding: 5px;
-    border-radius: 20px;
-    border: solid;
-    border-width: 1px;
-    border-color: #757575;
-    justify-content: center;
-    align-content: center;
-}
 
 .user-chat-bubble, .response-chat-bubble {
     background-color: #1f1f1f;
